<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.nikosmusicalstructure.MainActivity">

    <TextView
        android:id="@+id/songs"
        style="@style/CategoryStyle"
        android:background="@color/category_songs"
        android:text="@string/category_songs"
        />

    <TextView
        android:id="@+id/artists"
        style="@style/CategoryStyle"
        android:background="@color/category_artists"
        android:text="@string/category_artists"
        />

    <TextView
        android:id="@+id/albums"
        style="@style/CategoryStyle"
        android:background="@color/category_albums"
        android:text="@string/category_albums"
        />

    <TextView
        android:id="@+id/playlists"
        style="@style/CategoryStyle"
        android:background="@color/category_playlists"
        android:text="@string/category_playlists"
        />

    <TextView
        android:id="@+id/HomeComment"
        style="@style/CommentStyle"
        android:text="@string/home_screen"/>


</LinearLayout>
