<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background">



    <LinearLayout
        android:background="@color/category_albums"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/homebutton"
            style="@style/AlbumsButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"/>

        <Button
            android:id="@+id/songsbutton"
            style="@style/AlbumsButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_songs"/>

        <Button
            android:id="@+id/artistsbutton"
            style="@style/AlbumsButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_artists"/>

        <Button
            android:id="@+id/playlistsbutton"
            style="@style/AlbumsButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_playlists"/>



    </LinearLayout>

    <TextView
        android:id="@+id/AlbumsComment"
        style="@style/CommentStyle"
        android:text="@string/albums_screen"/>

</LinearLayout>